# devops-capstone-project

./: .gitignore  CAPSTONE_URLS.md  Dockerfile  LAB_NOTES.md  Makefile  QUICKSTART.md  README.md  SCREENSHOTS.md  SCREENSHOTS_RUBRIC.md  SCREENSHOT_FILENAMES.md  SUBMISSION_CHECKLIST.md  auto-capture-github.ps1  auto-screenshot.ps1  build.ps1  capture-remaining-updated.ps1  capture-remaining.ps1  capture-screenshots.ps1  pipelinerun.txt  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: user_story.md
.github/workflows/: ci.yml
accounts/: __init__.py  routes.py
k8s/: deployment.yaml  postgres.yaml
tekton/: README.md  pipeline.yaml  triggers.yaml
tekton/tasks/: flake8-task.yaml  pytest-task.yaml
tests/: conftest.py  test_accounts.py
