[metadata]
name = accounts
version = 1.0.0
description = Customer Accounts Microservice
author = DevOps Team
license = Apache 2.0

[options]
packages = find:
python_requires = >=3.9
install_requires =
    Flask>=2.0.0
    Flask-Cors>=3.0.0
    Flask-Talisman>=1.0.0
    gunicorn>=20.0.0

[options.packages.find]
where = .
exclude = tests*

# Pytest configuration
[tool:pytest]
addopts = 
    -v
    --tb=short
    --strict-markers
    --disable-warnings
    --color=yes
    --cov=accounts
    --cov-report=term-missing
    --cov-report=html
    --cov-fail-under=95
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

# Coverage configuration
[coverage:run]
source = accounts
omit = 
    */tests/*
    */venv/*
    */.venv/*
    */setup.py

[coverage:report]
precision = 2
show_missing = True
skip_covered = False

[coverage:html]
directory = htmlcov

# Flake8 configuration
[flake8]
max-line-length = 120
exclude = 
    .git,
    __pycache__,
    .venv,
    venv,
    .pytest_cache,
    htmlcov,
    *.egg-info
ignore = 
    E501,
    W503
per-file-ignores =
    __init__.py:F401
